# cutest

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CuTest.c  CuTest.h  Makefile  make-tests.ps1  make-tests.sh  readme.md
docs/: AI_MCP_GUIDE.md
mcp/: README.md  cutest_mcp_server.py
test/: AllTests.c  CMakeLists.txt  CuTestTest.c
